# Ciphershell

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_win.bat  ciphershell.md  ciphershellplus.md  ciphershellpro.md
.github/: CODEOWNERS
.github/workflows/: bootstrap-import.yml  ci.yml
build_linux/: CMakeCache.txt
cmake/: EmbedBinary.cmake
compat/: windows_compat.h
config/: default.toml  full_example.toml
docs/: decryptor_mutation_coverage.md  reference_runtime_fingerprints.md  security_audit_2026-07-23.md  zydis_encoder_pilot.md
llvm_pass/: BogusFlow.cpp  CMakeLists.txt  CipherShellPass.cpp  Flattening.cpp  InstrSubstitution.cpp  StringEncryption.cpp  decrypt_runtime.c
packer/: CMakeLists.txt  cli_options.cpp  cli_options.h  main.cpp  path_identity.h
packer/analysis/: capability_checker.cpp  capability_checker.h  cfg_builder.cpp  cfg_builder.h  disassembler.cpp  disassembler.h  function_discovery.cpp  function_discovery.h  hotspot_analyzer.cpp  hotspot_analyzer.h  instruction_ir.cpp  instruction_ir.h
packer/config/: config_parser.cpp  config_parser.h  protection_build_context.cpp  protection_build_context.h
packer/differential/: vm_native_differential_protocol.h  vm_native_differential_provider.cpp  vm_native_differential_provider.h  vm_native_differential_worker_harness.cpp  vm_native_differential_worker_harness.h  vm_native_differential_worker_main.cpp  vm_native_exec_trampoline.h  vm_native_exec_trampoline_x64.asm  vm_native_exec_trampoline_x86.asm
packer/gui/: console_gui.cpp  console_gui.h
packer/gui_win32/: CMakeLists.txt  app.manifest  cli_builder.cpp  cli_builder.h  config_model.h  control_ids.cpp  control_ids.h  drop_target.cpp  drop_target.h  file_dialogs.cpp  file_dialogs.h  input_validation.h  main.cpp  main_window.cpp  main_window.h  process_runner.cpp  process_runner.h  resources.rc  text_convert.cpp  text_convert.h  toml_writer.cpp  toml_writer.h  ui_helpers.cpp  ui_helpers.h  ui_metrics.h  win32_error.cpp  win32_error.h
packer/mutation/: bytecode_encryptor.cpp  bytecode_encryptor.h  mutation_engine.cpp  mutation_engine.h
packer/pe_parser/: dll_packer.cpp  dll_packer.h  pe_emitter.cpp  pe_emitter.h  pe_parser.cpp  pe_parser.h  pe_rebuilder.cpp  pe_rebuilder.h  pe_utils.h
packer/signature/: signature_eliminator.cpp  signature_eliminator.h
packer/transforms/: bogus_flow.cpp  bogus_flow.h  cfg_flattener.cpp  cfg_flattener.h  function_trampoline_patcher.cpp  function_trampoline_patcher.h  import_obfuscator.cpp  import_obfuscator.h  loader_import_builder.cpp  loader_import_builder.h  nanomite.cpp  nanomite.h  opaque_predicates.cpp  opaque_predicates.h  reloc_fixer.cpp  reloc_fixer.h  runtime_stream_cipher.h  section_encryptor.cpp  section_encryptor.h  string_encryptor.cpp  string_encryptor.h  string_encryptor_advanced.cpp  string_encryptor_advanced.h  stub_builder.cpp  stub_builder.h  translator.cpp  translator.h  vm_dispatch_table_codec.h  vm_handler_entry_codegen.cpp  vm_handler_entry_codegen.h  vm_handler_semantic_codegen.cpp  vm_handler_semantic_codegen.h  vm_handler_synthesizer.cpp  vm_handler_synthesizer.h  vm_instruction_bridge_builder.cpp  vm_instruction_bridge_builder.h  vm_nester.cpp  vm_nester.h  vm_runtime_builder.cpp  vm_runtime_builder.h  (+2 more)
packer/vm/: micro_semantics.cpp  micro_semantics.h  vm_schema.cpp  vm_schema.h  vm_verifier.cpp  vm_verifier.h
runtime/common/: vm_crypto.c  vm_crypto.h  vm_isa.h  vm_metadata.h  vm_micro_runtime_abi.h  vm_runtime_core.c  vm_runtime_core.h  vm_schema_contract.h
runtime/x64/: native_bridge.asm
runtime/x86/: native_bridge.asm
stub/: CMakeLists.txt
stub/stage0/: stage0_x64.asm  stage0_x86.asm
stub/stage1/: anti_debug.cpp  anti_debug.h  anti_debug_advanced.cpp  anti_debug_advanced.h  api_resolver.cpp  api_resolver.h  implicit_response.cpp  implicit_response.h  runtime_stub.cpp
stub/vm/: dispatcher.c  dispatcher.h  flags_emu.c  flags_emu.h  vm_context.c  vm_context.h
tests/: CMakeLists.txt  benchmark.cpp  test_cfg_flattener_differential.cpp  test_cli_options.cpp  test_e2e_packaging.cpp  test_fail_closed.cpp  test_fail_closed_features.cpp  test_function_discovery.cpp  test_gui_config_contract.cpp  test_pe_hardening.cpp  test_pe_parser.cpp  test_vm_correctness.cpp  test_vm_decryptor_coverage.cpp  test_vm_handler_synthesis.cpp  test_vm_micro_core.cpp  test_vm_native_differential.cpp  test_vm_public_entry.cpp  test_vm_runtime_integrity.cpp
tests/samples/: function_discovery_fixture.cpp  hello_world.cpp  minimal.cpp  test_oep.cpp  vm_abi_probe_x64.asm  vm_abi_probe_x86.asm  vm_abi_unwind_gate.cpp  vm_abi_unwind_gate.h  vm_flags_probe_x64.asm  vm_flags_probe_x86.asm  vm_manual_x64_sample.cpp  vm_manual_x64_sample.similarity_gate.toml  vm_runtime_gate_exe.cpp  vm_runtime_trace_reader.h  vm_similarity_gate_runner.cpp  vm_similarity_gate_sample.cpp  vm_similarity_gate_sample.toml
tests/scripts/: pe_dump.py  static_analysis.py  vm_kernel_static_gate.py  vm_micro_op_ratio_probe.cpp  vm_per_build_similarity_gate.py
tools/: CMakeLists.txt  decryptor.cpp
